# kata-device-plugin

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yaml  ci-on-push.yaml  ci.yaml  codeql.yaml  coverage.yaml  docs.yaml  release.yaml  revoke-ok-to-test.yaml  scorecard.yml  static-checks.yaml  zizmor.yaml
deploy/: configmap.yaml  daemonset.yaml
src/: cdi.rs  config.rs  lib.rs  main.rs  platform.rs  plugin.rs  vfio.rs
tests/: server.rs
