[package]
name = "kata-device-plugin"
version = "0.2.0"
edition = "2021"

[lib]
name = "kata_device_plugin"
path = "src/lib.rs"

[[bin]]
name = "kata-device-plugin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
hyper-util = "0.1"
# Pinned to the PR #108 merge commit (public spec fields, optional clap,
# jsonschema without reqwest) until the next crates.io release.
container-device-interface = { git = "https://github.com/cncf-tags/container-device-interface-rs", rev = "4de398c8bc49518aa792565a0c62d1b968a7b87c" }
# Pinned to the PR #5 merge commit (IOMMUFD cdev enumeration + testfs
# fixtures) until the first crates.io release.
pcilibs-rs = { git = "https://github.com/kata-containers/pcilibs-rs", rev = "e6b910296aba5344f4e767b97863ea9160fa630d" }
prost = "0.14"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
tonic = "0.14"
tonic-prost = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pcilibs-rs = { git = "https://github.com/kata-containers/pcilibs-rs", rev = "e6b910296aba5344f4e767b97863ea9160fa630d", features = ["testfs"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[build-dependencies]
tonic-prost-build = "0.14"
